<resources>
    <string name="app_name">My College</string>
    <string name="title_home">Home</string>
    <string name="title_timetable">Timetable</string>
    <string name="username_placeholder">Логин</string>
    <string name="procollege">ProCollege</string>
    <string name="passwrod_placeholder">Пароль</string>
    <string name="login">Войти</string>
    <string name="ktc_title">Вход в ProCollege</string>
    <string name="news_title">News Title</string>
    <string name="new_body">New body</string>
    <string name="news_date">news date</string>

    <string name="first_course">1-й Курс:</string>
    <string name="second_course">2-й Курс:</string>
    <string name="third_course">3-й Курс:</string>
    <string name="fourth_course">4-й Курс:</string>
    <string name="dayheader">DayHeader</string>
    <string name="_1">1</string>
    <string name="lesson_from">00:00</string>
    <string name="lesson_to">12:00</string>
    <string name="lesson_title">Lesson title</string>
    <string name="lesson_teacher">Lesson teacher</string>
    <string name="lesson_classroom">lesson classroom</string>
</resources>