<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:padding="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/day_header_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="2dp">

        <TextView
            android:id="@+id/day_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="4dp"
            android:text="@string/dayheader"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/day_header_left"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:background="@color/accent"
            app:layout_constraintBottom_toBottomOf="@+id/day_header"
            app:layout_constraintEnd_toStartOf="@+id/day_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/day_header" />

        <View
            android:id="@+id/day_header_right"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/accent"
            app:layout_constraintBottom_toBottomOf="@+id/day_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/day_header"
            app:layout_constraintTop_toTopOf="@+id/day_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lesson_info"
        android:layout_width="409dp"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day_header_block">

        <TextView
            android:id="@+id/lesson_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_1"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.502" />

        <TextView
            android:id="@+id/lesson_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="-8dp"
            android:text="@string/lesson_from"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toEndOf="@+id/lesson_number"
            app:layout_constraintTop_toTopOf="@+id/lesson_number" />

        <TextView
            android:id="@+id/lesson_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="-8dp"
            android:text="@string/lesson_to"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="@+id/lesson_number"
            app:layout_constraintStart_toEndOf="@+id/lesson_number" />

        <TextView
            android:id="@+id/lesson_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lesson_title"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lesson_from"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lesson_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/lesson_teacher"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lesson_to" />

        <TextView
            android:id="@+id/lesson_classroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/lesson_classroom"
            android:textColor="@color/disabled_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>