<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:gravity="center"
    android:paddingTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:elevation="8dp"
        android:orientation="vertical"
        android:paddingLeft="64dp"
        android:paddingTop="32dp"
        android:paddingRight="64dp"
        android:paddingBottom="32dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/procollege"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_color">

            <android.support.design.widget.TextInputEditText
                android:layout_width="172dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/primary"
                android:hint="@string/username_placeholder"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_color"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/accent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="172dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/primary"
                android:hint="@string/passwrod_placeholder"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>